@@ -1,7 +1,6 @@
 package com.nhnacademy.boostorenginx.service.impl;
 
 import com.nhnacademy.boostorenginx.dto.coupon.*;
-import com.nhnacademy.boostorenginx.dto.couponpolicy.CouponPolicyIdRequestDto;
 import com.nhnacademy.boostorenginx.dto.membercoupon.MemberCouponUseRequestDto;
 import com.nhnacademy.boostorenginx.entity.Coupon;
 import com.nhnacademy.boostorenginx.entity.CouponHistory;
@@ -11,8 +10,8 @@ import com.nhnacademy.boostorenginx.error.CouponException;
 import com.nhnacademy.boostorenginx.error.NotFoundCouponException;
 import com.nhnacademy.boostorenginx.error.NotFoundCouponPolicyException;
 import com.nhnacademy.boostorenginx.repository.CouponHistoryRepository;
+import com.nhnacademy.boostorenginx.repository.CouponPolicyRepository;
 import com.nhnacademy.boostorenginx.repository.CouponRepository;
-import com.nhnacademy.boostorenginx.service.CouponPolicyService;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
@@ -30,7 +29,8 @@ import java.util.Arrays;
 import java.util.List;
 import java.util.Optional;
 
-import static org.junit.jupiter.api.Assertions.*;
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertThrows;
 import static org.mockito.Mockito.*;
 
 
@@ -41,7 +41,7 @@ class CouponServiceImplTest {
     private CouponRepository couponRepository;
 
     @Mock
-    private CouponPolicyService couponPolicyService;
+    private CouponPolicyRepository couponPolicyRepository;
 
     @Mock
     private CouponHistoryRepository couponHistoryRepository;
@@ -53,11 +53,22 @@ class CouponServiceImplTest {
     private CouponPolicy mockPolicy;
     private Coupon mockCoupon;
 
+    private LocalDateTime now = LocalDateTime.now();
+
     @BeforeEach
     void setUp() {
         mockHistory = new CouponHistory();
-        mockPolicy = new CouponPolicy();
-        mockCoupon = new Coupon();
+
+        mockPolicy = CouponPolicy.builder()
+                .name("Test Policy")
+                .build();
+
+        mockCoupon = new Coupon(
+                Status.UNUSED,
+                now,
+                now.plusDays(5),
+                mockPolicy
+        );
     }
 
     @DisplayName("쿠폰 생성")
@@ -67,130 +78,121 @@ class CouponServiceImplTest {
         LocalDateTime expiredAt = LocalDateTime.now().plusDays(5);
         CouponCreateRequestDto requestDto = new CouponCreateRequestDto(policyId, expiredAt);
 
-        when(couponPolicyService.findById(new CouponPolicyIdRequestDto(policyId)))
-                .thenReturn(Optional.of(mockPolicy));
-
-        mockCoupon = new Coupon(Status.UNUSED, LocalDateTime.now(), expiredAt, mockPolicy);
+        when(couponPolicyRepository.findById(policyId)).thenReturn(Optional.of(mockPolicy));
         when(couponRepository.save(any(Coupon.class))).thenReturn(mockCoupon);
 
-        couponService.createCoupon(requestDto);
-        verify(couponPolicyService, times(1)).findById(new CouponPolicyIdRequestDto(policyId));
+        CouponResponseDto responseDto = couponService.createCoupon(requestDto);
+
+        assertEquals(mockCoupon.getId(), responseDto.id());
+        verify(couponPolicyRepository, times(1)).findById(policyId);
         verify(couponRepository, times(1)).save(any(Coupon.class));
     }
 
-    @DisplayName("쿠폰정책 ID 가 존재하지않은 예외")
+    @DisplayName("쿠폰정책 ID 에 해당하지 않는 쿠폰정책이 없을경우")
     @Test
     void createCoupon_ThrowNotFoundPolicyException() {
         Long policyId = 1L;
         LocalDateTime expiredAt = LocalDateTime.now().plusDays(5);
         CouponCreateRequestDto requestDto = new CouponCreateRequestDto(policyId, expiredAt);
-        when(couponPolicyService.findById(new CouponPolicyIdRequestDto(policyId)))
-                .thenReturn(Optional.empty());
+
+        when(couponPolicyRepository.findById(policyId)).thenReturn(Optional.empty());
+
         NotFoundCouponPolicyException exception = assertThrows(NotFoundCouponPolicyException.class,
                 () -> couponService.createCoupon(requestDto));
 
-        assertEquals("ID 에 해당하는 CouponPolicy 를 찾지 못했습니다: " + policyId, exception.getMessage());
-        verify(couponPolicyService, times(1)).findById(new CouponPolicyIdRequestDto(policyId));
+        assertEquals("ID 에 해당하는 CouponPolicy 를 찾을 수 없습니다: " + policyId, exception.getMessage());
+        verify(couponPolicyRepository, times(1)).findById(policyId);
         verify(couponRepository, never()).save(any(Coupon.class));
 
     }
 
-    @DisplayName("쿠폰 코드로 쿠폰 조회")
+    @DisplayName("쿠폰코드로 쿠폰조회")
     @Test
     void getCouponByCode() {
-        String couponCode = "96481f01-b4ca-4c0f-ba5c-42c0d44956d2";
+        String couponCode = "TEST123456";
         CouponCodeRequestDto requestDto = new CouponCodeRequestDto(couponCode);
-
-        Coupon mockCoupon = new Coupon(
-                Status.UNUSED,
-                LocalDateTime.now().minusDays(1),
-                LocalDateTime.now().plusDays(1),
-                mockPolicy
-        );
         when(couponRepository.findByCode(couponCode)).thenReturn(Optional.of(mockCoupon));
-        Optional<Coupon> result = couponService.getCouponByCode(requestDto);
-
-        assertTrue(result.isPresent());
-        assertEquals(mockCoupon, result.get());
+        Coupon coupon = couponService.getCouponByCode(requestDto);
+        assertEquals(mockCoupon.getId(), coupon.getId());
+        assertEquals(mockCoupon.getStatus(), coupon.getStatus());
         verify(couponRepository, times(1)).findByCode(couponCode);
     }
 
-    @DisplayName("쿠폰 코드가 null 인 경우 예외발생")
+    @DisplayName("쿠폰코드로 조회실패할 경우")
     @Test
-    void getCouponByCode_NullCode() {
-        CouponCodeRequestDto nullRequestDto = new CouponCodeRequestDto(null);
-        CouponCodeRequestDto blankRequestDto = new CouponCodeRequestDto(" ");
+    void getCouponByCode_ThrowNotFoundCouponException() {
+        String couponCode = "fail";
+        CouponCodeRequestDto requestDto = new CouponCodeRequestDto(couponCode);
 
-        NotFoundCouponException nullException = assertThrows(NotFoundCouponException.class,
-                () -> couponService.getCouponByCode(nullRequestDto));
-        assertEquals("입력받은 code 에 해당하는 Coupon 을 찾지 못헀습니다null", nullException.getMessage());
+        when(couponRepository.findByCode(couponCode)).thenReturn(Optional.empty());
 
-        NotFoundCouponException blankException = assertThrows(NotFoundCouponException.class,
-                () -> couponService.getCouponByCode(blankRequestDto));
-        assertEquals("입력받은 code 에 해당하는 Coupon 을 찾지 못헀습니다 ", blankException.getMessage());
+        NotFoundCouponException exception = assertThrows(NotFoundCouponException.class,
+                () -> couponService.getCouponByCode(requestDto));
+
+        assertEquals("CODE 에 해당하는 Coupon 을 찾을 수 없습니다: " + couponCode, exception.getMessage());
+        verify(couponRepository, times(1)).findByCode(couponCode);
     }
 
-    @DisplayName("만료된 쿠폰들 조회")
+    @DisplayName("만료된 쿠폰 조회")
     @Test
     void getExpiredCoupons() {
         LocalDateTime expiredAt = LocalDateTime.now();
-        int page = 0;
-        int size = 10;
+        int page = 0, size = 10;
         Pageable pageable = PageRequest.of(page, size);
         CouponExpiredRequestDto requestDto = new CouponExpiredRequestDto(expiredAt, page, size);
-        Coupon coupon1 = new Coupon(Status.EXPIRED, LocalDateTime.now().minusDays(10), expiredAt.minusDays(5), null);
-        Coupon coupon2 = new Coupon(Status.EXPIRED, LocalDateTime.now().minusDays(20), expiredAt.minusDays(15), null);
-        List<Coupon> couponList = Arrays.asList(coupon1, coupon2);
-        Page<Coupon> mockPage = new PageImpl<>(couponList, pageable, couponList.size());
-        when(couponRepository.findByExpiredAtBeforeOrderByExpiredAtAsc(expiredAt, pageable)).thenReturn(mockPage);
-        Page<Coupon> result = couponService.getExpiredCoupons(requestDto);
 
-        assertNotNull(result);
+        List<Coupon> expiredCoupons = Arrays.asList(
+                new Coupon(Status.EXPIRED, LocalDateTime.now().minusDays(10), expiredAt.minusDays(5), mockPolicy),
+                new Coupon(Status.EXPIRED, LocalDateTime.now().minusDays(20), expiredAt.minusDays(15), mockPolicy)
+        );
+
+        Page<Coupon> mockPage = new PageImpl<>(expiredCoupons, pageable, expiredCoupons.size());
+        when(couponRepository.findByExpiredAtBeforeOrderByExpiredAtAsc(expiredAt, pageable)).thenReturn(mockPage);
+
+        Page<CouponResponseDto> result = couponService.getExpiredCoupons(requestDto);
+
         assertEquals(2, result.getTotalElements());
-        assertEquals(coupon1, result.getContent().get(0));
+        assertEquals(expiredCoupons.get(0).getStatus(), result.getContent().get(0).status());
         verify(couponRepository, times(1)).findByExpiredAtBeforeOrderByExpiredAtAsc(expiredAt, pageable);
     }
 
-    @DisplayName("만료일자가 null 인 경우 예외발생")
+    @DisplayName("만료된 쿠폰을 조회할때 expiredAt 이 null 일 경우")
     @Test
-    void getExpiredCoupons_NullRequestDto() {
-        int page = 0;
-        int size = 10;
-        CouponExpiredRequestDto requestDto = new CouponExpiredRequestDto(null, page, size);
+    void getExpiredCoupons_NullExpiredAt() {
+        CouponExpiredRequestDto requestDto = new CouponExpiredRequestDto(null, 0, 10);
         CouponException exception = assertThrows(CouponException.class,
                 () -> couponService.getExpiredCoupons(requestDto));
-
-        assertEquals("입력받은 currentDateTime 이 null 입니다", exception.getMessage());
+        assertEquals("입력받은 시간이 null 입니다", exception.getMessage());
+        verifyNoInteractions(couponRepository);
     }
 
     @DisplayName("활성화된 쿠폰 조회")
     @Test
     void getActiveCoupons() {
-        LocalDateTime currentDateTime = LocalDateTime.now();
-        int page = 0;
-        int size = 10;
+        now = LocalDateTime.now();
+        int page = 0, size = 10;
         Pageable pageable = PageRequest.of(page, size);
-        CouponActiveRequestDto requestDto = new CouponActiveRequestDto(currentDateTime, page, size);
+        CouponActiveRequestDto requestDto = new CouponActiveRequestDto(now, page, size);
 
-        Coupon coupon1 = new Coupon(Status.UNUSED, LocalDateTime.now().minusDays(5), currentDateTime.plusDays(5), null);
-        Coupon coupon2 = new Coupon(Status.UNUSED, LocalDateTime.now().minusDays(10), currentDateTime.plusDays(10), null);
-        List<Coupon> couponList = Arrays.asList(coupon1, coupon2);
-        Page<Coupon> mockPage = new PageImpl<>(couponList, pageable, couponList.size());
-        when(couponRepository.findActiveCoupons(currentDateTime, pageable)).thenReturn(mockPage);
-        Page<Coupon> result = couponService.getActiveCoupons(requestDto);
+        List<Coupon> activeCoupons = Arrays.asList(
+                new Coupon(Status.UNUSED, now.minusDays(5), now.plusDays(5), mockPolicy),
+                new Coupon(Status.UNUSED, now.minusDays(10), now.plusDays(10), mockPolicy)
+        );
 
-        assertNotNull(result);
+        Page<Coupon> mockPage = new PageImpl<>(activeCoupons, pageable, activeCoupons.size());
+        when(couponRepository.findActiveCoupons(now, pageable)).thenReturn(mockPage);
+
+        Page<CouponResponseDto> result = couponService.getActiveCoupons(requestDto);
+
         assertEquals(2, result.getTotalElements());
-        assertEquals(coupon1, result.getContent().get(0));
-        verify(couponRepository, times(1)).findActiveCoupons(currentDateTime, pageable);
+        assertEquals(activeCoupons.get(0).getStatus(), result.getContent().get(0).status());
+        verify(couponRepository, times(1)).findActiveCoupons(now, pageable);
     }
 
-    @DisplayName("일자가 null 인 경우 예외발생")
+    @DisplayName("활성화된 쿠폰을 조회할때 currentDateTime 이 null 인 경우")
     @Test
-    void getActiveCoupons_NullRequestDto() {
-        int page = 0;
-        int size = 10;
-        CouponActiveRequestDto requestDto = new CouponActiveRequestDto(null, page, size);
+    void getActiveCoupons_NullCurrentDateTime() {
+        CouponActiveRequestDto requestDto = new CouponActiveRequestDto(null, 0, 10);
         CouponException exception = assertThrows(CouponException.class,
                 () -> couponService.getActiveCoupons(requestDto));
 
@@ -198,154 +200,157 @@ class CouponServiceImplTest {
         verifyNoInteractions(couponRepository);
     }
 
-    @DisplayName("쿠폰정책으로 쿠폰 조회")
+    @DisplayName("쿠폰정책으로 쿠폰조회")
     @Test
     void getCouponsByPolicy() {
         Long policyId = 1L;
         int page = 0;
-        int size = 10;
-        Pageable pageable = PageRequest.of(page, size);
-        CouponFindCouponPolicyIdRequestDto requestDto = new CouponFindCouponPolicyIdRequestDto(policyId, page, size);
-        mockPolicy = new CouponPolicy();
-        List<Coupon> couponList = Arrays.asList(new Coupon(), new Coupon());
-        Page<Coupon> mockPage = new PageImpl<>(couponList, pageable, couponList.size());
-        when(couponPolicyService.findById(new CouponPolicyIdRequestDto(policyId))).thenReturn(Optional.of(mockPolicy));
-        when(couponRepository.findByCouponPolicyOrderByIdAsc(mockPolicy, pageable)).thenReturn(mockPage);
-        Page<Coupon> result = couponService.getCouponsByPolicy(requestDto);
+        int pageSize = 10;
+        Pageable pageable = PageRequest.of(page, pageSize);
+        CouponFindCouponPolicyIdRequestDto requestDto = new CouponFindCouponPolicyIdRequestDto(policyId, page, pageSize);
 
-        assertNotNull(result);
+        List<Coupon> coupons = List.of(
+                new Coupon(Status.UNUSED, LocalDateTime.now().minusDays(5), LocalDateTime.now().plusDays(5), mockPolicy),
+                new Coupon(Status.UNUSED, LocalDateTime.now().minusDays(10), LocalDateTime.now().plusDays(10), mockPolicy)
+        );
+
+        Page<Coupon> mockPage = new PageImpl<>(coupons, pageable, coupons.size());
+
+        when(couponPolicyRepository.findById(policyId)).thenReturn(Optional.of(mockPolicy));
+        when(couponRepository.findByCouponPolicyOrderByIdAsc(mockPolicy, pageable)).thenReturn(mockPage);
+
+        Page<CouponResponseDto> result = couponService.getCouponsByPolicy(requestDto);
+
         assertEquals(2, result.getTotalElements());
-        verify(couponPolicyService, times(1)).findById(new CouponPolicyIdRequestDto(policyId));
+        assertEquals(coupons.get(0).getStatus(), result.getContent().get(0).status());
+        verify(couponPolicyRepository, times(1)).findById(policyId);
         verify(couponRepository, times(1)).findByCouponPolicyOrderByIdAsc(mockPolicy, pageable);
     }
 
-    @DisplayName("쿠폰정책으로 쿠폰조회 실패 예외발생")
+    @DisplayName("쿠폰정책으로 쿠폰을 조회할때 해당하는 쿠폰정책이 없는 경우")
     @Test
-    void getCouponsByPolicy_ThrowNotFoundPolicyException() {
+    void getCouponsByPolicy_ThrowNotFoundCouponPolicyException() {
         Long policyId = 1L;
         CouponFindCouponPolicyIdRequestDto requestDto = new CouponFindCouponPolicyIdRequestDto(policyId, 0, 10);
-        when(couponPolicyService.findById(new CouponPolicyIdRequestDto(policyId))).thenReturn(Optional.empty());
+
+        when(couponPolicyRepository.findById(policyId)).thenReturn(Optional.empty());
+
         NotFoundCouponPolicyException exception = assertThrows(NotFoundCouponPolicyException.class,
                 () -> couponService.getCouponsByPolicy(requestDto));
+
         assertEquals("해당 ID 의 CouponPolicy 를 찾을 수 없습니다", exception.getMessage());
-        verify(couponPolicyService, times(1)).findById(new CouponPolicyIdRequestDto(policyId));
-        verify(couponRepository, never()).findByCouponPolicyOrderByIdAsc(any(), any());
+        verify(couponPolicyRepository, times(1)).findById(policyId);
     }
 
-    @DisplayName("상태로 쿠폰조회")
+    @DisplayName("쿠폰상태로 쿠폰조회")
     @Test
     void getCouponsByStatus() {
         String statusString = "UNUSED";
         int page = 0;
-        int size = 10;
-        Pageable pageable = PageRequest.of(page, size);
-        CouponFindStatusRequestDto requestDto = new CouponFindStatusRequestDto(statusString, page, size);
+        int pageSize = 10;
+        Pageable pageable = PageRequest.of(page, pageSize);
+        CouponFindStatusRequestDto requestDto = new CouponFindStatusRequestDto(statusString, page, pageSize);
+
         Status status = Status.UNUSED;
-        List<Coupon> couponList = Arrays.asList(new Coupon(), new Coupon());
-        Page<Coupon> mockPage = new PageImpl<>(couponList, pageable, couponList.size());
+        List<Coupon> coupons = List.of(
+                new Coupon(status, LocalDateTime.now().minusDays(5), LocalDateTime.now().plusDays(5), mockPolicy),
+                new Coupon(status, LocalDateTime.now().minusDays(10), LocalDateTime.now().plusDays(10), mockPolicy)
+        );
+
+        Page<Coupon> mockPage = new PageImpl<>(coupons, pageable, coupons.size());
+
         when(couponRepository.findByStatusOrderByStatusAsc(status, pageable)).thenReturn(mockPage);
-        Page<Coupon> result = couponService.getCouponsByStatus(requestDto);
-        assertNotNull(result);
+
+        Page<CouponResponseDto> result = couponService.getCouponsByStatus(requestDto);
+
         assertEquals(2, result.getTotalElements());
+        assertEquals(status, result.getContent().get(0).status());
         verify(couponRepository, times(1)).findByStatusOrderByStatusAsc(status, pageable);
     }
 
-    @DisplayName("상태가 null 일 경우 ")
-    @Test
-    void getCouponsByStatus_NullStatus() {
-        CouponFindStatusRequestDto requestDto = new CouponFindStatusRequestDto(null, 0, 10);
-        CouponException exception = assertThrows(CouponException.class,
-                () -> couponService.getCouponsByStatus(requestDto));
-        assertEquals("Status 가 null 입니다", exception.getMessage());
-        verify(couponRepository, never()).findByStatusOrderByStatusAsc(any(), any());
-    }
-
-    // 테스트 코드 실패 -> 수정 필요
-    @DisplayName("만료된 쿠폰 업데이트")
+    @DisplayName("만료된 쿠폰들의 상태 업데이트")
     @Test
     void updateExpiredCoupon() {
         LocalDateTime expiredDate = LocalDateTime.now().minusDays(1);
-        int page = 1;
+        String status = "UNUSED";
+        int page = 0;
         int size = 5;
         Pageable pageable = PageRequest.of(page, size);
-        CouponUpdateExpiredRequestDto requestDto = new CouponUpdateExpiredRequestDto(expiredDate, Status.UNUSED.toString(), page, size);
 
-        Coupon coupon1 = new Coupon(Status.UNUSED, LocalDateTime.now().minusDays(10), expiredDate.minusDays(5), null);
-        Coupon coupon2 = new Coupon(Status.UNUSED, LocalDateTime.now().minusDays(15), expiredDate.minusDays(10), null);
-        List<Coupon> couponList = Arrays.asList(coupon1, coupon2);
+        CouponUpdateExpiredRequestDto requestDto = new CouponUpdateExpiredRequestDto(expiredDate, status, page, size);
+
+        Coupon mockCoupon1 = new Coupon(Status.UNUSED, LocalDateTime.now().minusDays(10), expiredDate.minusDays(5), mockPolicy);
+        Coupon mockCoupon2 = new Coupon(Status.UNUSED, LocalDateTime.now().minusDays(15), expiredDate.minusDays(10), mockPolicy);
+
+        List<Coupon> couponList = List.of(mockCoupon1, mockCoupon2);
         Page<Coupon> mockPage = new PageImpl<>(couponList, pageable, couponList.size());
 
         when(couponRepository.findByExpiredAtBeforeAndStatusOrderByExpiredAtAsc(expiredDate, Status.UNUSED, pageable))
                 .thenReturn(mockPage);
-
         couponService.updateExpiredCoupon(requestDto);
 
-        verify(couponRepository, times(1)).findByExpiredAtBeforeAndStatusOrderByExpiredAtAsc(expiredDate, Status.UNUSED, pageable);
+        verify(couponRepository, times(1))
+                .findByExpiredAtBeforeAndStatusOrderByExpiredAtAsc(expiredDate, Status.UNUSED, pageable);
         verify(couponRepository, times(1)).saveAll(couponList);
         verify(couponHistoryRepository, times(1)).saveAll(anyList());
     }
 
-    @DisplayName("상태가 null 일 경우 예외발생")
+    @DisplayName("만료된 쿠폰들의 상태 업데이트 할때 Status 가 null 일 경우")
     @Test
-    void updateExpiredCoupon_ThrowsException_WhenStatusIsNull() {
+    void updateExpiredCoupon_StatusIsNull() {
         LocalDateTime expiredDate = LocalDateTime.now().minusDays(1);
-        int page = 0;
-        int size = 10;
-        CouponUpdateExpiredRequestDto requestDto = new CouponUpdateExpiredRequestDto(expiredDate, null, page, size);
+        CouponUpdateExpiredRequestDto requestDto = new CouponUpdateExpiredRequestDto(expiredDate, null, 0, 10);
 
         CouponException exception = assertThrows(CouponException.class,
                 () -> couponService.updateExpiredCoupon(requestDto));
-
-        assertEquals("Status 가 null 입니다", exception.getMessage());
-        verifyNoInteractions(couponRepository);
-        verifyNoInteractions(couponHistoryRepository);
+        assertEquals("입력받은 Status 가 null 입니다", exception.getMessage());
     }
 
-    @DisplayName("쿠폰사용")
+    @DisplayName("쿠폰을 사용할 경우")
     @Test
     void useCoupon() {
         Long couponId = 1L;
-        Long memberId = 1L;
-        LocalDateTime now = LocalDateTime.of(2024, 12, 23, 9, 0, 0);
-        MemberCouponUseRequestDto request = new MemberCouponUseRequestDto(couponId, memberId);
+        Long memberId = 100L;
+        LocalDateTime fixedTime = LocalDateTime.of(2024, 12, 26, 13, 43, 54);
+
+        MemberCouponUseRequestDto requestDto = new MemberCouponUseRequestDto(couponId, memberId);
+
         mockCoupon = mock(Coupon.class);
+        mockHistory = new CouponHistory(Status.UNUSED, fixedTime, "USED", mockCoupon);
+
         when(couponRepository.findById(couponId)).thenReturn(Optional.of(mockCoupon));
         when(mockCoupon.getStatus()).thenReturn(Status.UNUSED);
-        mockHistory = new CouponHistory(Status.UNUSED, now, "UNUSED", mockCoupon);
-        when(mockCoupon.changeStatus(eq(Status.USED), any(LocalDateTime.class), eq("USED"))).thenReturn(mockHistory);
-        couponService.useCoupon(request);
+        when(mockCoupon.changeStatus(eq(Status.USED), any(LocalDateTime.class), eq("USED")))
+                .thenReturn(mockHistory);
+
+        couponService.useCoupon(requestDto);
+
         verify(couponRepository, times(1)).findById(couponId);
         verify(mockCoupon, times(1)).getStatus();
         verify(mockCoupon, times(1)).changeStatus(eq(Status.USED), any(LocalDateTime.class), eq("USED"));
+        verify(couponRepository, times(1)).save(mockCoupon);
         verify(couponHistoryRepository, times(1)).save(mockHistory);
     }
 
-    @DisplayName("쿠폰 ID 가 없는 경우 예외발생")
+    @DisplayName("쿠폰을 사용할때 쿠폰의 상태가 UNUSED 가 아닌 경우")
     @Test
-    void useCoupon_ThrowsException_WhenCouponIdIsNotFound() {
+    void useCoupon_ThrowsCouponException_WhenStatusIsNotUnused() {
         Long couponId = 1L;
-        Long memberId = 1L;
-        MemberCouponUseRequestDto request = new MemberCouponUseRequestDto(couponId, memberId);
-        when(couponRepository.findById(couponId)).thenReturn(Optional.empty());
-        NotFoundCouponException exception = assertThrows(NotFoundCouponException.class,
-                () -> couponService.useCoupon(request));
-        assertEquals("해당 ID 의 쿠폰을 찾을 수 없습니다" + couponId, exception.getMessage());
-        verify(couponRepository, times(1)).findById(couponId);
-    }
+        Long memberId = 100L;
+        MemberCouponUseRequestDto requestDto = new MemberCouponUseRequestDto(couponId, memberId);
 
-    @DisplayName("쿠폰 상태가 UNUSED 인 경우 예외발생")
-    @Test
-    void useCoupon_ThrowsException_WhenCouponStatusIsUnused() {
-        Long couponId = 1L;
-        Long memberId = 1L;
-        MemberCouponUseRequestDto request = new MemberCouponUseRequestDto(couponId, memberId);
         mockCoupon = mock(Coupon.class);
+
         when(couponRepository.findById(couponId)).thenReturn(Optional.of(mockCoupon));
         when(mockCoupon.getStatus()).thenReturn(Status.EXPIRED);
+
         CouponException exception = assertThrows(CouponException.class,
-                () -> couponService.useCoupon(request));
+                () -> couponService.useCoupon(requestDto));
+
         assertEquals("현재 쿠폰 상태: " + Status.EXPIRED, exception.getMessage());
         verify(couponRepository, times(1)).findById(couponId);
-        verify(mockCoupon, times(2)).getStatus();
+        verify(mockCoupon, times(1)).getStatus();
+        verifyNoMoreInteractions(mockCoupon);
+        verifyNoInteractions(couponHistoryRepository);
     }
 }
